Prerit_Munjal/Day-7/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-kubecloud-launch
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - dev.kubecloud.tech
      secretName: tls-cert
  ingressClassName: nginx
  rules:
    - host: dev.kubecloud.tech
      http:
        paths:
          - path: /launch
            pathType: Prefix
            backend:
              service:
                name: app-1-service
                port:
                  number: 8080
          - path: /gtm
            pathType: Prefix
            backend:
              service:
                name: app-2-service
                port:
                  number: 8080
